# data-structures

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  README.md
.github/workflows/: ci-debug.yml
LICENSES/: BSD-3-Clause.txt
cmake/: ClangTidy.cmake  ClangToolchain.cmake  Cppcheck.cmake  Docs.cmake  GNUCodeCoverage.cmake  LLVMCodeCoverage.cmake
include/ds/: alloc.h  status.h
include/ds/lists/: sll.h
src/: CMakeLists.txt  alloc.c
src/lists/: CMakeLists.txt  sll.c  sll_impl.h
tests/: CMakeLists.txt  demo.c  main_test.cpp
tests/lists/: CMakeLists.txt  sll_unittest.cpp  sll_unittest_impl.cpp  sll_unittest_impl.hpp
